--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -1,12 +1,18 @@
-{% include 'myapp/navbar.html' %}
 
+{% extends 'myapp/navbar.html' %}
+
+{% block content %}
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
   <title>User Dashboard</title>
   <style>
-    
+    .container-full-width {
+      width: 100%;
+      border-radius: 20px;
+    }
+
     .container {
       max-width: 600px;
       margin: 0 auto;
@@ -16,95 +22,100 @@
     .card {
       margin-bottom: 20px;
       background-color: #ffffff;
-      border-radius: 10px;
+      border-radius: 20px;
       padding: 20px;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+      width: 100%;
+      height: 300px;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      text-align: center;
+      justify-content: space-between;
     }
 
     .card-profile {
       display: flex;
       align-items: center;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
 
     .card-profile img {
-      width: 50px;
-      height: 50px;
+      width: 40px;
+      height: 40px;
       border-radius: 50%;
       margin-right: 10px;
     }
 
     .card-title {
-      font-size: 20px;
+      font-size: 16px;
       font-weight: bold;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
     }
 
     .card-content {
-      margin-bottom: 15px;
+      margin-bottom: 10px;
+    }
+
+    .card-image {
+      max-width: 100%;
+      border-radius: 10px;
+      margin-bottom: 10px;
     }
 
     .card-buttons {
       display: flex;
       align-items: center;
+      justify-content: space-between;
     }
 
     .card-buttons button {
       background: none;
       border: none;
       cursor: pointer;
-      margin-right: 10px;
+      font-size: 24px;
     }
 
     .card-buttons button i {
       margin-right: 5px;
     }
-  </style>
+</style>
+
 </head>
 <body>
 
-<div class="container">
-  <div class="card">
-    <div class="card-profile">
-      <img src="/path/to/profile_picture.jpg" alt="Profile Picture" class="rounded-circle profile-picture">
-      <h3 class="username">Username</h3>
-    </div>
-    <div class="card-content">
-      <!-- Example post from others -->
-      <div class="post">
-        <p>
-          This is an example post from another user. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tempus scelerisque neque in viverra. Nulla facilisi.
-        </p>
+<div class="container-full-width">
+ 
+
+  <div class="container">
+    {% for post in posts %}
+    <div class="card">
+      <div class="card-profile">
+        <img src="/path/to/profile_picture.jpg" alt="Profile Picture" class="rounded-circle profile-picture">
+        <h3 class="card-title">{{ post.user.first_name }} {{ post.user.last_name }}</h3>
       </div>
-      <!-- Example post from others -->
-      <div class="post">
-        <p>
-          This is another example post. Duis eget metus vitae mi euismod sodales. Ut et dapibus lacus. Aliquam consequat neque vitae libero ullamcorper pellentesque.
-        </p>
+      <div class="card-content">
+        <p>{{ post.text }}</p>
       </div>
-      <!-- Add more posts from others here -->
+      {% if post.image %}
+      <img src="{{ post.image.url }}" alt="Post Image" class="card-image">
+      {% endif %}
+      <div class="card-buttons">
+        <button>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="black" class="bi bi-heart" viewBox="0 0 16 16">
+            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+          </svg> 
+        </button>
+        <button>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-chat-dots" viewBox="0 0 16 16">
+            <path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+            <path d="m2.165 15.803.02-.004c1.83-.363 2.948-.842 3.468-1.105A9.06 9.06 0 0 0 8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6a10.437 10.437 0 0 1-.524 2.318l-.003.011a10.722 10.722 0 0 1-.244.637c-.079.186.074.394.273.362a21.673 21.673 0 0 0 .693-.125zm.8-3.108a1 1 0 0 0-.287-.801C1.618 10.83 1 9.468 1 8c0-3.192 3.004-6 7-6s7 2.808 7 6c0 3.193-3.004 6-7 6a8.06 8.06 0 0 1-2.088-.272 1 1 0 0 0-.711.074c-.387.196-1.24.57-2.634.893a10.97 10.97 0 0 0 .398-2z"/>
+          </svg> 
+        </button>
+        <button>
+          <i class="fas fa-share"></i> 
+        </button>
+      </div>
     </div>
-    <div class="card-buttons">
-      
-      <button>
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="bi bi-heart" viewBox="0 0 16 16">
-          <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-        </svg> 
-      </button>
-      <button>
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-dots" viewBox="0 0 16 16">
-          <path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-          <path d="m2.165 15.803.02-.004c1.83-.363 2.948-.842 3.468-1.105A9.06 9.06 0 0 0 8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6a10.437 10.437 0 0 1-.524 2.318l-.003.011a10.722 10.722 0 0 1-.244.637c-.079.186.074.394.273.362a21.673 21.673 0 0 0 .693-.125zm.8-3.108a1 1 0 0 0-.287-.801C1.618 10.83 1 9.468 1 8c0-3.192 3.004-6 7-6s7 2.808 7 6c0 3.193-3.004 6-7 6a8.06 8.06 0 0 1-2.088-.272 1 1 0 0 0-.711.074c-.387.196-1.24.57-2.634.893a10.97 10.97 0 0 0 .398-2z"/>
-        </svg> 
-      </button>
-      <button>
-        <i class="fas fa-share"></i> 
-      </button>
-    </div>
+    {% endfor %}
   </div>
 </div>
 
@@ -112,3 +123,4 @@
 
 </body>
 </html>
+{% endblock %}
