--- a/myapp/templates/myapp/login.html
+++ b/myapp/templates/myapp/login.html
@@ -1,5 +1,5 @@
 {% include 'myapp/navbar.html' %}
-
+<body></body>
 <section class="vh-100 bg-image">
   <div class="mask d-flex align-items-center h-100 gradient-custom-3">
     <div class="container h-100">
@@ -34,7 +34,8 @@
                   <button type="submit" value="login"
                     class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Login</button>
                 </div>
-                <p class="text-center text-muted mt-5 mb-0"> <a href="{% url 'myapp:register' %}" class="fw-bold text-body"><u>SignUp Here!</u></a></p>
+                <p class="text-center text-muted mt-5 mb-0"> <a href="{% url 'myapp:register' %}"
+                    class="fw-bold text-body"><u>SignUp Here!</u></a></p>
 
               </form>
 
@@ -45,3 +46,9 @@
     </div>
   </div>
 </section>
+
+<style>
+  section.vh-100 {
+    padding-top: 70px;
+  }
+</style>
