--- a/myapp/templates/myapp/navbar.html
+++ b/myapp/templates/myapp/navbar.html
@@ -11,8 +11,8 @@
   <style>
     body {
       font-family: 'Agdasima', sans-serif;
-      padding-top: 70px; /* Add padding to create space below the navbar */
       background-color: skyblue; /* Set the body background color to sky blue */
+      font-size: 30px;
     }
 
     .navbar-brand {
@@ -43,7 +43,6 @@
       border-radius: 30px; /* Set the border radius for the pop-up */
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
       z-index: 9999; /* Increase the z-index value */
-      margin-top: 0; /* Remove the margin-top */
       column-count: 2; /* Divide the items into two columns */
     }
 
@@ -73,6 +72,10 @@
       border-radius: 50%; /* Make the image rounded */
       opacity: 0.7; /* Set the transparency level (0.0 to 1.0) */
     }
+
+    .content-container {
+      padding-top: 70px; /* Add padding to create space below the navbar */
+    }
   </style>
 </head>
 <body>
@@ -95,8 +98,12 @@
   </div>
 </nav>
 
-<!-- Your content here -->
-
+<div class="content-container">
+ 
+</div>
+{% block content %}
+<!-- Content from other templates will be inserted here -->
+{% endblock %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
