--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -1,4 +1,3 @@
-
 {% extends 'myapp/navbar.html' %}
 
 {% block content %}
@@ -25,11 +24,8 @@
       border-radius: 20px;
       padding: 20px;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-      width: 100%;
-      height: 300px;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
     }
 
     .card-profile {
@@ -77,16 +73,47 @@
     .card-buttons button i {
       margin-right: 5px;
     }
-</style>
+
+    .card-image {
+      width: 100%;
+      max-height: 300px; /* Adjust the desired maximum height for the image */
+      object-fit: contain; /* Scale the image to fit within the card while maintaining its aspect ratio */
+      border-radius: 10px;
+      margin-bottom: 10px;
+    }
+    .create-post-button {
+      font-size: 30px;
+      color: #000000;
+      cursor: pointer;
+      background-color: inherit;
+      border: none; /* Remove the button border */
+      padding: 0;
+      position: sticky;
+      top: 20px; /* Adjust the top value as per your needs */
+      z-index: 1; /* Set a higher z-index to ensure it appears above other elements */
+      margin-left: 45%;
+      
+    }
+    
+  </style>
 
 </head>
 <body>
 
 <div class="container-full-width">
+
+  <a href="{% url 'myapp:create_post' %}">
+    <button class="create-post-button">
+      <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="grey" class="bi bi-plus-circle" viewBox="0 0 16 16">
+        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+      </svg>
+    </button>
+  </a>
  
 
   <div class="container">
-    {% for post in posts %}
+    {% for post in posts reversed %}
     <div class="card">
       <div class="card-profile">
         <img src="/path/to/profile_picture.jpg" alt="Profile Picture" class="rounded-circle profile-picture">
