--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -26,6 +26,7 @@
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
       display: flex;
       flex-direction: column;
+      position: relative; /* Add this line */
     }
 
     .card-profile {
@@ -94,11 +95,41 @@
       margin-left: 45%;
       
     }
-    
+
+    /* Add this CSS for the delete icon */
+    .delete-icon {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 24px;
+      color: red;
+      cursor: pointer;
+    }
   </style>
 
 </head>
 <body>
+  <!-- Delete Confirmation Modal -->
+<div id="deleteConfirmationModal" class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Delete Confirmation</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Are you sure you want to delete this post?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary cancel-button" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-danger confirm-button">Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <div class="container-full-width">
 
@@ -114,9 +145,16 @@
 
   <div class="container">
     {% for post in posts reversed %}
-    <div class="card">
+    <div class="card" id="post-{{ post.id }}">
+      {% if request.user == post.user %}
+      <div class="delete-icon" onclick="deletePost({{ post.id }})">
+        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="grey" class="bi bi-trash3" viewBox="0 0 16 16">
+          <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
+        </svg>
+      </div>
+      {% endif %}
       <div class="card-profile">
-        <img src="/path/to/profile_picture.jpg" alt="Profile Picture" class="rounded-circle profile-picture">
+        <img src="{{ post.user.profile_picture.image.url }}" alt="Profile Picture" class="rounded-circle profile-picture">
         <h3 class="card-title">{{ post.user.first_name }} {{ post.user.last_name }}</h3>
       </div>
       <div class="card-content">
@@ -192,6 +230,57 @@
     };
   
     xhr.send('post_id=' + encodeURIComponent(postId));
+  }
+  
+  function deletePost(postId) {
+    var deleteConfirmationModal = document.getElementById('deleteConfirmationModal');
+    
+    var confirmButton = deleteConfirmationModal.querySelector('.confirm-button');
+    confirmButton.onclick = function() {
+      // Send an AJAX request to delete the post
+      var xhr = new XMLHttpRequest();
+      xhr.open('POST', '{% url "myapp:delete_post" %}', true);
+      xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+      xhr.setRequestHeader('X-CSRFToken', getCookie('csrftoken'));
+  
+      xhr.onload = function() {
+        if (xhr.status === 200) {
+          console.log(xhr.responseText);
+  
+          try {
+            var response = JSON.parse(xhr.responseText);
+            if (response.success) {
+              // Remove the deleted post from the DOM
+              var deletedPost = document.getElementById('post-' + postId);
+              if (deletedPost) {
+                deletedPost.remove();
+              }
+            }
+          } catch (error) {
+            console.error('Error parsing JSON response:', error);
+          }
+        } else {
+          console.error('Request failed with status:', xhr.status);
+        }
+      };
+  
+      xhr.onerror = function() {
+        console.error('Request failed.');
+      };
+  
+      xhr.send('post_id=' + encodeURIComponent(postId));
+  
+      deleteConfirmationModal.style.display = 'none';
+    };
+    
+    var cancelButtons = deleteConfirmationModal.querySelectorAll('.cancel-button');
+    for (var i = 0; i < cancelButtons.length; i++) {
+      cancelButtons[i].onclick = function() {
+        deleteConfirmationModal.style.display = 'none';
+      };
+    }
+    
+    deleteConfirmationModal.style.display = 'block';
   }
   
 
