--- a/myapp/templates/myapp/navbar.html
+++ b/myapp/templates/myapp/navbar.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Vigu</title>
   {% load static %}
 
@@ -16,9 +17,10 @@
     }
 
     nav {
-      margin: 27px auto 0;
+      margin: 10px auto 0;
       position: relative;
-      width: 590px;
+      width: 100%;
+      max-width: 590px;
       height: 50px;
       background-color: #34495e;
       border-radius: 8px;
@@ -37,6 +39,7 @@
       text-align: center;
       color: white;
       cursor: pointer;
+      padding: 0 10px; /* Add padding to create spacing */
     }
 
     nav .animation {
@@ -49,52 +52,52 @@
     }
 
     a:nth-child(1) {
-      width: 100px;
+      width: 20%;
     }
 
     a:nth-child(2) {
-      width: 110px;
+      width: 20%;
     }
 
     a:nth-child(3) {
-      width: 100px;
+      width: 20%;
     }
 
     a:nth-child(4) {
-      width: 160px;
+      width: 20%;
     }
 
     a:nth-child(5) {
-      width: 120px;
+      width: 20%;
     }
 
     nav .start-home, a:nth-child(1):hover~.animation {
-      width: 100px;
+      width: 20%;
       left: 0;
       background-color: #1abc9c;
     }
 
     nav .start-about, a:nth-child(2):hover~.animation {
-      width: 110px;
-      left: 100px;
+      width: 20%;
+      left: 20%;
       background-color: #e74c3c;
     }
 
     nav .start-blog, a:nth-child(3):hover~.animation {
-      width: 100px;
-      left: 210px;
+      width: 20%;
+      left: 40%;
       background-color: #3498db;
     }
 
     nav .start-portefolio, a:nth-child(4):hover~.animation {
-      width: 160px;
-      left: 310px;
+      width: 20%;
+      left: 60%;
       background-color: #9b59b6;
     }
 
     nav .start-contact, a:nth-child(5):hover~.animation {
-      width: 120px;
-      left: 470px;
+      width: 20%;
+      left: 80%;
       background-color: #e67e22;
     }
 
@@ -119,24 +122,24 @@
       bottom: 20px;
       width: 100%;
       text-align: center;
-      color: #ecf0f1;
+      color: #222525;
       font-family: 'Cherry Swash',cursive;
       font-size: 16px;
     }
 
     span {
-      color: #2BD6B4;
+      color: #0a0a0a;
     }
   </style>
 </head>
 <body>
 
 <nav>
-  <a href="{% url 'myapp:index' %}">Home</a>
-  <a href="{% url 'myapp:profile' %}">Profile</a>
-  <a href="#">Messages</a>
-  <a href="#">Notifications</a>
-  <a href="{% url 'myapp:logout' %}">Logout</a>
+  <a href="{% url 'myapp:index' %}"><i class="fas fa-home"></i></a>
+  <a href="{% url 'myapp:profile' %}"><i class="fas fa-user"></i></a>
+  <a href="#"><i class="fas fa-envelope"></i></a>
+  <a href="{% url 'myapp:notifications' %}"><i class="fas fa-bell"></i></a>
+  <a href="{% url 'myapp:logout' %}"><i class="fas fa-sign-out-alt"></i></a>
   
   <div class="animation start-home"></div>
 </nav>
