--- a/myapp/templates/myapp/notifications.html
+++ b/myapp/templates/myapp/notifications.html
@@ -1,21 +1,24 @@
 {% extends 'myapp/navbar.html' %}
 
 {% block content %}
-<div class="container-fluid mt-4 text-center" style="background-color: inherit;">
-  <h2 style="color: white;">Notifications</h2>
- 
+<div class="container mt-4">
+  <h2 class="text-center mb-4" style="color: rgb(78, 214, 78);">Notifications</h2>
+
+  <div class="card-deck">
     {% for notification in notifications reversed %}
-      <a href="{% url 'myapp:post_detail' notification.post.id %}" class="notification-link">
-        <div class="d-flex w-100 justify-content-between">
-          <h5 class="mb-1" style="color: white;">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="yellow" class="bi bi-bell" viewBox="0 0 16 16">
+      <div class="card mb-3">
+        <div class="card-body">
+          <h5 class="card-title">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="green" class="bi bi-bell" viewBox="0 0 16 16">
               <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z"/>
             </svg>
-            {{ notification.title }}
+            <a href="{% url 'myapp:post_detail' notification.post.id %}" style="text-decoration: none;">{{ notification.title }}</a>
           </h5>
+          <p class="card-text">{{ notification.message }}</p>
+          
         </div>
-      </a>
+      </div>
     {% endfor %}
-  
+  </div>
 </div>
 {% endblock %}
