--- a/chatapp/templates/room.html
+++ b/chatapp/templates/room.html
@@ -1,110 +1,113 @@
 {% extends 'myapp/navbar.html' %}
 
 {% block content %}
-{% if user.is_authenticated %}
-
-  <div class="container">
-    <div class="row d-flex justify-content-center">
-      <div class="col-12">
-        <div class="alert alert-info d-flex justify-content-between" role="alert">
-          <h5>
-            {% if request.user.username == room_name %}
-              Your Chat with {{ other_user.get_full_name }}
-            {% else %}
-              Chat : {{ room_name }}
-            {% endif %}
-          </h5>
-          <div class="chat-header-profile">
-            {% if request.user.username == room_name %}
-              <img src="{{ other_user.profile_photo.url }}" alt="{{ other_user.get_full_name }}" class="rounded-circle mr-3" width="40" height="40">
-            {% else %}
-              <i class="fas fa-user"></i>
-            {% endif %}
+  {% if user.is_authenticated %}
+    <div class="container">
+      <div class="row d-flex justify-content-center">
+        <div class="col-12">
+          <div class="alert alert-info d-flex justify-content-between" role="alert">
+            <h5>
+              {% if request.user.username == room_name %}
+                Your Chat with {{ other_user.get_full_name }}
+              {% else %}
+                Chat : {{ room_name }}
+              {% endif %}
+            </h5>
+            <div class="chat-header-profile">
+              {% if request.user.username == room_name %}
+                <img src="{{ other_user.profile_photo.url }}" alt="{{ other_user.get_full_name }}" class="rounded-circle mr-3" width="40" height="40">
+              {% else %}
+                <i class="fas fa-user"></i>
+              {% endif %}
+            </div>
           </div>
-        </div>
-        <div class="chat-container">
-          <div class="chat-box" id="chatbox">
-            {% if messages %}
-              {% for message in messages %}
-                <div class="chat-message {% if message.user == request.user %}out{% else %}in{% endif %}">
-                  <div class="message-text">{{ message.content }}</div>
-                </div>
-              {% endfor %}
-            {% else %}
-              <div class="no-messages">No Messages in this Room.</div>
-            {% endif %}
-          </div>
-          <div class="chat-input">
-            <form>
-              <input class="form-control" placeholder="Type your message..." id="my_input" type="text" required>
-              <button type="button" class="btn btn-primary" id="submit_button">Send</button>
-            </form>
+          <div class="chat-container">
+            <div class="chat-box" id="chatbox">
+              {% if messages %}
+                {% for message in messages %}
+                  <div class="chat-message {% if message.user == request.user %}out{% else %}in{% endif %}">
+                    <div class="message-text">{{ message.content }}</div>
+                  </div>
+                {% endfor %}
+              {% else %}
+                <div class="no-messages">No Messages in this Room.</div>
+              {% endif %}
+            </div>
+            <div class="chat-input">
+              <form>
+                <input class="form-control" placeholder="Type your message..." id="my_input" type="text" required>
+                <button type="button" class="btn btn-primary" id="submit_button">Send</button>
+              </form>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  
-  {{ slug|json_script:"room_slug" }}
-  <script>
-    const chatbox = document.querySelector("#chatbox");
-  
-    function scrollToBottom() {
-      chatbox.scrollTop = chatbox.scrollHeight;
-    }
-  
-    scrollToBottom();
-  
-    const roomName = JSON.parse(document.getElementById('room_slug').textContent);
-    const chatSocket = new WebSocket("ws://" + window.location.host + "/ws/" + roomName + "/");
-    chatSocket.onopen = function (e) {
-      console.log("The connection was set up successfully!");
-    };
-    chatSocket.onclose = function (e) {
-      console.log("Something unexpected happened!");
-    };
-  
-    document.querySelector("#my_input").focus();
-    document.querySelector("#my_input").onkeyup = function (e) {
-      if (e.keyCode === 13) {
-        e.preventDefault();
-        document.querySelector("#submit_button").click();
+
+    {{ slug|json_script:"room_slug" }}
+    <script>
+      const chatbox = document.querySelector("#chatbox");
+
+      function scrollToBottom() {
+        chatbox.scrollTop = chatbox.scrollHeight;
       }
-    };
-  
-    document.querySelector("#submit_button").onclick = function (e) {
-      var messageInput = document.querySelector("#my_input").value;
-  
-      if (messageInput.length === 0) {
-        alert("Add some Input First Or Press Send Button!");
-      } else {
-        chatSocket.send(JSON.stringify({ message: messageInput, username: "{{request.user.username}}", room_name: "{{room_name}}" }));
-      }
-    };
-  
-    chatSocket.onmessage = function (e) {
-      const data = JSON.parse(e.data);
-      var div = document.createElement("div");
-      div.innerHTML = "<div class='message-text'>" + data.message + "</div>";
-  
-      if (data.username === "{{ request.user.username }}") {
-        div.classList.add("chat-message", "out");
-      } else {
-        div.classList.add("chat-message", "in");
-      }
-  
-      document.querySelector("#my_input").value = "";
-      document.querySelector("#chatbox").appendChild(div);
+
       scrollToBottom();
-    };
-  </script>
-{% else %}
-  <div class="container">
-    <div class="alert alert-info d-flex justify-content-between" role="alert">
-      <h5>You are not logged in</h5>
+
+      const roomName = JSON.parse(document.getElementById('room_slug').textContent);
+      const protocol = window.location.protocol === "https:" ? "wss:" : "ws:";
+      const chatSocket = new WebSocket(`${protocol}//${window.location.host}/ws/${roomName}/`);
+      
+      chatSocket.onopen = function (e) {
+        console.log("The connection was set up successfully!");
+      };
+      
+      chatSocket.onclose = function (e) {
+        console.log("Something unexpected happened!");
+      };
+
+      document.querySelector("#my_input").focus();
+      
+      document.querySelector("#my_input").onkeyup = function (e) {
+        if (e.keyCode === 13) {
+          e.preventDefault();
+          document.querySelector("#submit_button").click();
+        }
+      };
+
+      document.querySelector("#submit_button").onclick = function (e) {
+        var messageInput = document.querySelector("#my_input").value;
+
+        if (messageInput.length === 0) {
+          alert("Add some Input First Or Press Send Button!");
+        } else {
+          chatSocket.send(JSON.stringify({ message: messageInput, username: "{{request.user.username}}", room_name: "{{room_name}}" }));
+        }
+      };
+
+      chatSocket.onmessage = function (e) {
+        const data = JSON.parse(e.data);
+        var div = document.createElement("div");
+        div.innerHTML = "<div class='message-text'>" + data.message + "</div>";
+
+        if (data.username === "{{ request.user.username }}") {
+          div.classList.add("chat-message", "out");
+        } else {
+          div.classList.add("chat-message", "in");
+        }
+
+        document.querySelector("#my_input").value = "";
+        document.querySelector("#chatbox").appendChild(div);
+        scrollToBottom();
+      };
+    </script>
+  {% else %}
+    <div class="container">
+      <div class="alert alert-info d-flex justify-content-between" role="alert">
+        <h5>You are not logged in</h5>
+      </div>
     </div>
-  </div>
-{% endif %}
+  {% endif %}
 
 <style>
   .chat-container {
